--- a/SpecflowTest/Utilities/ReportUI.html
+++ b/SpecflowTest/Utilities/ReportUI.html
@@ -3,7 +3,7 @@
 <HEAD>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
-<TITLE>Verisk Mozart - Automation Test Execution Report</TITLE>
+<TITLE>Automation Test Execution Report</TITLE>
 
 <script type='text/javascript'>
 	var pubXMLDoc;
@@ -350,7 +350,7 @@
 	<input type="file" id="xmlFileinput" onchange= "handleFiles(this.files)" size=80> </TD>
 </TR>
 </TABLE>
-<h2 align=center><FONT FACE=Calibri COLOR=#1A9CB0>Verisk Mozart - Automation Test Execution Report</Font></h2>
+<h2 align=center><FONT FACE=Calibri COLOR=#1A9CB0>Automation Test Execution Report</Font></h2>
 
 <TABLE WIDTH=100%  >
 	<TR CLASS=header>
